@@ -1,0 +1,19 @@
+from django.db import migrations
+
+
+# Fix 0140_v2_6__clean_brick_ids_prefixes.py which ignored brick IDs "hatbrick"
+# generated by the configuration
+def fix_hat_brick_ids(apps, schema_editor):
+    apps.get_model('creme_core', 'BrickDetailviewLocation').objects.filter(
+        brick_id='hatbrick',
+    ).update(brick_id='hat')
+
+
+class Migration(migrations.Migration):
+    dependencies = [
+        ('creme_core', '0155_v2_6__set_version'),
+    ]
+
+    operations = [
+        migrations.RunPython(fix_hat_brick_ids),
+    ]
